--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,16 @@
+.jumbotron {
+    background-image: url("../images/TuneSquad.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-color: transparent;
+    min-height: 20vw;
+    
+
+}
+
+.container-fluid {
+    max-height: 100vw;
+}
 
  
   
